# ChangeLog for media-sound/musepack-tools
# Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/media-sound/musepack-tools/ChangeLog,v 1.50 2009/12/09 14:03:11 ssuominen Exp $

*musepack-tools-458 (09 Dec 2009)

  09 Dec 2009; Samuli Suominen <ssuominen@gentoo.org>
  +musepack-tools-458.ebuild, +files/musepack-tools-458-gentoo.patch:
  Version bump.

  01 Oct 2009; Tobias Klausmann <klausman@gentoo.org>
  musepack-tools-444.ebuild:
  Stable on alpha, bug #284781

  27 Sep 2009; nixnut <nixnut@gentoo.org> musepack-tools-444.ebuild:
  ppc stable #284781

  26 Sep 2009; Brent Baude <ranger@gentoo.org> musepack-tools-444.ebuild:
  Marking musepack-tools-444 ppc64 for bug 284781

  20 Sep 2009; Markus Meier <maekke@gentoo.org> musepack-tools-444.ebuild:
  amd64/x86 stable, bug #284781

  15 Sep 2009; Jeroen Roovers <jer@gentoo.org> musepack-tools-444.ebuild:
  Stable for HPPA (bug #284781).

  31 Aug 2009; Brent Baude <ranger@gentoo.org> musepack-tools-444.ebuild:
  Marking musepack-tools-444 ~ppc64 for bug 279069

  28 Aug 2009; Tobias Klausmann <klausman@gentoo.org>
  musepack-tools-444.ebuild:
  Keyworded on alpha, bug #279069

  31 Jul 2009; Samuli Suominen <ssuominen@gentoo.org>
  musepack-tools-444.ebuild, files/musepack-tools-444-gentoo.patch:
  Update patch for upstream.

  29 Jul 2009; Jeroen Roovers <jer@gentoo.org> musepack-tools-444.ebuild:
  Marked ~hppa (bug #279069).

  27 Jul 2009; Alexis Ballier <aballier@gentoo.org>
  musepack-tools-444.ebuild:
  keyword ~x86-fbsd, bug #279069

  26 Jul 2009; Mark Loeser <halcy0n@gentoo.org> musepack-tools-444.ebuild:
  Marked ~x86; bug #279069

*musepack-tools-444 (25 Jul 2009)

  25 Jul 2009; Samuli Suominen <ssuominen@gentoo.org>
  +musepack-tools-444.ebuild, +files/musepack-tools-444-gentoo.patch:
  Version bump to SV8.

  14 May 2009; Markus Meier <maekke@gentoo.org>
  musepack-tools-1.15v-r1.ebuild:
  amd64/x86 stable, bug #269512
