@@ -1,8 +1,18 @@
+-----BEGIN PGP SIGNED MESSAGE-----
+Hash: SHA1
+
 AUX musepack-tools-444-gentoo.patch 6615 RMD160 ea228d0fcff63e6abebf002491d72d21206ea84a SHA1 d94cbda61f5de293396bd40ba54f8eb5d83e9e08 SHA256 cf89b7e5b5cfec29ae4d1950462dc205ff273810713207473450165a7a6e4f82
 AUX musepack-tools-458-gentoo.patch 1776 RMD160 9cb9f9d70e079f7066917034c7513b855bd3d2d4 SHA1 2ef3787da3ab9fbab9054f7687c47e4a78125b4f SHA256 185019ac4dbb02e5bf040b066221138b7b3cec576104c219f3a7b4390d638bc7
 DIST musepack-tools-444.tar.bz2 223636 RMD160 6acb25ff67d0c786b9bd1b5d38a81f025838b25a SHA1 0e25c211daba86640b53c019a6b2b91ca094a291 SHA256 db6c94b3587c8228a08597654dd71b47e8dc52f9722903cac7cc82665fccddbb
 DIST musepack-tools-458.tar.bz2 166922 RMD160 bd889d8c96a1cb3e9e158d56c321ea4f719e5485 SHA1 274fc83dd4269ce86071b0eb99fb6ea316f20ae4 SHA256 85560791eb6396f1f3e8c3a0219cd463f461396d776c363a1d045db410b522e1
 EBUILD musepack-tools-444.ebuild 1021 RMD160 89325e5ab94bb03d18907bb81e61f8ee091c4e40 SHA1 5fc421673e721a11f7a59c990d91cef5d6ddb4a3 SHA256 b0225d5b86a2f10c128e245856fd625b6727aceaa53e116cd6f1fcb35393f93d
-EBUILD musepack-tools-458.ebuild 852 RMD160 452199c2a3a0d42d2e7201dae2e26a9c7b7e0d0a SHA1 ba9beea54caedf1dc171a9731b7be1fb6f3c7304 SHA256 da9b507bc5e91138bef14a0d1be6c8681974d7ddce5dc6534a20930f572bc473
-MISC ChangeLog 8841 RMD160 ead5c2da88473087b9bfc00954639e930eca5406 SHA1 f351c0daf1837796d8914cf9da7f358d341b1704 SHA256 dca9f28d027292950f45bc9bf538ce517827152008965ab4212e4900544e1b8a
+EBUILD musepack-tools-458.ebuild 871 RMD160 f8dc85f10525a8d4061af5ca9ed7dab30ca9d735 SHA1 f17fb5810de68322887da61f0b905e7a42fdc366 SHA256 ebdf73d2825d373e9805672917547e6f27d7c966d18acbc38b435de47430ca26
+MISC ChangeLog 8935 RMD160 ce77cec1756663951132dc13e9e0fca2fe100682 SHA1 40e77109cd41eb06c183735109f8370a6d0b7153 SHA256 574b3f8e827176256ecd02cf5613e87ff0a34dfa2ca57200c8c53fe1f9061fef
 MISC metadata.xml 160 RMD160 10be84fed28405abd22adc6689e87e5bb77e3501 SHA1 0c1bb16a7cc376ef35b87d8699ec9504718d36b9 SHA256 6bafe4a5c7b42309f124ebc2a9d78ebe5379aec4dcdc88c0bda2ab79c9851a6b
+-----BEGIN PGP SIGNATURE-----
+Version: GnuPG v2.0.14 (GNU/Linux)
+
+iEYEARECAAYFAktOxI4ACgkQOypDUo0oQOqa6ACZAQlHf8PeNuB0AJqs2ky/5saP
+7wgAn3KdIOxTtXhu95pW3i23Wt8ncHa3
+=4JSc
+-----END PGP SIGNATURE-----
